<resources>
    <string name="app_name">CatatanKu</string>
    <string name="dev_name">Ilham Yudiatmoko</string>
    <string name="develop_by">Develop by</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="phone_number">Nomor telepon</string>
    <string name="password">Kata sandi</string>
    <string name="confirm_password">Konfirmasi kata sandi</string>
    <string name="account_register">Daftar Akun</string>
    <string name="register">Daftar</string>
    <string name="already_have_account">Sudah punya akun? Masuk</string>
    <string name="account_login">Login Akun</string>
    <string name="login">Masuk</string>
    <string name="dont_have_account">Belum punya akun? Daftar</string>
    <string name="database_name">catatanku_database</string>
    <string name="username">Username</string>
    <string name="all_fields_are_required">Semua data wajib diisi</string>
    <string name="passwords_do_not_match">Kata sandi tidak sesuai</string>
    <string name="account_not_found">Akun tidak ditemukan</string>
    <string name="incorrect_password">Kata sandi salah</string>
    <string name="username_already_exists">Username sudah digunakan</string>
    <string name="title">Judul Catatan</string>
    <string name="enter_note_title">Ketikkan judul catatan</string>
    <string name="note_content">Isi Catatan</string>
    <string name="hint_enter_note_content">Ketikkan isi catatan di sini...</string>
    <string name="action_save">Simpan</string>
    <string name="action_save_changes">Simpan perubahan</string>
    <string name="new_note">Catatan Baru</string>
    <string name="profile">Profil</string>
    <string name="title_already_exist">Judul sudah digunakan</string>
    <string name="failed_to_insert_note">Gagal menyimpan catatan</string>
    <string name="detail_notes">Detail Catatan</string>
    <string name="update_note_failed">Gagal simpan perubahan</string>
    <string name="logout">Logout</string>
    <string name="update_profile_successed">Update profil berhasil</string>
</resources>