<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <TextView
        android:id="@+id/tv_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@drawable/et_border"
        android:ellipsize="end"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_medium"
        android:hint="@string/enter_note_title"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/note_content"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        android:background="@drawable/et_border"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_medium"
        android:gravity="start|top"
        android:hint="@string/hint_enter_note_content"
        android:inputType="textMultiLine"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:backgroundTint="@color/Crayola"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/action_save"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:backgroundTint="@color/Crayola"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/action_save_changes"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="gone" />

</LinearLayout>