<?xml version="1.0" encoding="utf-8"?><!--  ~    Hi, Code Enthusiast!  ~    https://github.com/yudiatmoko  --><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:layout_margin="4dp"    android:orientation="vertical">    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_name"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="8dp"        app:boxStrokeColor="@color/Crayola"        app:hintTextColor="@color/Crayola"        app:prefixTextColor="@color/Crayola">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_name"            style="@style/CustomTextAppearance"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/name"            android:singleLine="true"            android:textSize="16sp" />    </com.google.android.material.textfield.TextInputLayout>    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_email"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="8dp"        app:boxStrokeColor="@color/Crayola"        app:hintTextColor="@color/Crayola"        app:prefixTextColor="@color/Crayola">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_email"            style="@style/CustomTextAppearance"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/email"            android:inputType="text|textEmailAddress"            android:singleLine="true"            android:textSize="16sp" />    </com.google.android.material.textfield.TextInputLayout>    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_phone"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="8dp"        app:boxStrokeColor="@color/Crayola"        app:hintTextColor="@color/Crayola"        app:prefixTextColor="@color/Crayola">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_phone"            style="@style/CustomTextAppearance"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/phone_number"            android:inputType="phone"            android:singleLine="true"            android:textSize="16sp" />    </com.google.android.material.textfield.TextInputLayout>    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_password"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="8dp"        app:boxStrokeColor="@color/Crayola"        app:endIconCheckable="true"        app:endIconMode="password_toggle"        app:hintTextColor="@color/Crayola"        app:prefixTextColor="@color/Crayola">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_password"            style="@style/CustomTextAppearance"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/password"            android:inputType="text|textPassword"            android:singleLine="true"            android:textSize="16sp" />    </com.google.android.material.textfield.TextInputLayout>    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/til_confirm_password"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="8dp"        app:boxStrokeColor="@color/Crayola"        app:endIconMode="password_toggle"        app:hintTextColor="@color/Crayola"        app:prefixTextColor="@color/Crayola">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/et_confirm_password"            style="@style/CustomTextAppearance"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:fontFamily="@font/nunito_sans_medium"            android:hint="@string/confirm_password"            android:imeOptions="actionDone"            android:inputType="text|textPassword"            android:singleLine="true"            android:textSize="16sp" />    </com.google.android.material.textfield.TextInputLayout></LinearLayout>